new ggplotly call signature. and the most tedious white space clean up

--- a/_posts/ggplot2/box/2015-07-15-boxplot-facet-grid.html
+++ b/_posts/ggplot2/box/2015-07-15-boxplot-facet-grid.html
@@ -1,5 +1,5 @@
 ---
-name: facets with time series 
+name: facets with time series
 plot_url: https://plot.ly/~MattSundquist/17100/
 language: ggplot2
 suite: box
@@ -22,6 +22,6 @@ ftable(xtabs(~ public + apply + pared, data = dat))
 
 ggplot(dat, aes(x = apply, y = gpa)) +
     geom_boxplot(size = .75) +
-    facet_grid(pared ~ public, margins = TRUE) 
+    facet_grid(pared ~ public, margins = TRUE)
 
-py$ggplotly()
+ggplotly()
