--- a/_posts/ggplot2/box/2015-07-28-geom_bar-diamond.html
+++ b/_posts/ggplot2/box/2015-07-28-geom_bar-diamond.html
@@ -3,7 +3,7 @@ name: <code>geom_boxplot</code> with mean using <code>stat_summary</code>
 plot_url: https://plot.ly/~MattSundquist/18190/rating-vs-cond/
 language: ggplot2
 suite: box
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Plotting_distributions_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Plotting_distributions_(ggplot2)/">Cookbook for R</a>.
 order: 4
 sitemap: false
 ---
@@ -18,5 +18,5 @@ dat <- data.frame(cond = factor(rep(c("A","B"), each=200)), rating = c(rnorm(200
 ggplot(dat, aes(x=cond, y=rating)) + geom_boxplot() +
     stat_summary(fun.y=mean, geom="point", shape=5, size=4)
 
-py$ggplotly()
+ggplotly()
 
