--- a/_posts/ggplot2/box/2015-07-28-geom_bar-filled.html
+++ b/_posts/ggplot2/box/2015-07-28-geom_bar-filled.html
@@ -3,7 +3,7 @@ name: <code>geom_boxplot</code> with conditions colored
 plot_url: https://plot.ly/~MattSundquist/18181/rating-vs-cond/
 language: ggplot2
 suite: box
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Plotting_distributions_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Plotting_distributions_(ggplot2)/">Cookbook for R</a>.
 order: 2
 sitemap: false
 ---
@@ -17,4 +17,4 @@ dat <- data.frame(cond = factor(rep(c("A","B"), each=200)), rating = c(rnorm(200
 
 ggplot(dat, aes(x=cond, y=rating, fill=cond)) + geom_boxplot()
 
-py$ggplotly()
+ggplotly()
