--- a/_posts/ggplot2/facets/2015-07-15-facet-horizontal.html
+++ b/_posts/ggplot2/facets/2015-07-15-facet-horizontal.html
@@ -1,9 +1,9 @@
 ---
-name: horizontal <code>facet_grid</code> 
+name: horizontal <code>facet_grid</code>
 plot_url: https://plot.ly/~MattSundquist/16891
 language: ggplot2
 suite: facets
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Cookbook for R</a>.
 order: 3
 sitemap: false
 ---
@@ -18,4 +18,4 @@ sp <- ggplot(tips, aes(x=total_bill, y=tip/total_bill)) + geom_point(shape=1)
 # Divide by levels of "sex", in the horizontal direction
 sp + facet_grid(. ~ sex)
 
-py$ggplotly()
+ggplotly()
