--- a/_posts/ggplot2/facets/2015-07-15-free-scales.html
+++ b/_posts/ggplot2/facets/2015-07-15-free-scales.html
@@ -1,5 +1,5 @@
 ---
-name: free scales 
+name: free scales
 plot_url: https://plot.ly/~MattSundquist/16912
 language: ggplot2
 suite: facets
@@ -15,4 +15,4 @@ library(plotly)
 # A histogram of bill sizes
 hp <- ggplot(tips, aes(x=total_bill)) + geom_histogram(binwidth=2,colour="white")
 
-py$ggplotly()
+ggplotly()
