--- a/_posts/ggplot2/geom_abline/2015-07-20-hline-mean.html
+++ b/_posts/ggplot2/geom_abline/2015-07-20-hline-mean.html
@@ -1,5 +1,5 @@
 ---
-name: add mean line with <code>geom_hline</code> 
+name: add mean line with <code>geom_hline</code>
 plot_url: https://plot.ly/~MattSundquist/17496/yval-vs-xval/
 language: ggplot2
 suite: geom_abline
@@ -43,4 +43,4 @@ sp <- ggplot(dat, aes(x=xval, y=yval, colour=cond)) + geom_point()
 sp + geom_hline(aes(yintercept=10)) +
     geom_line(stat="vline", xintercept="mean")
 
-py$ggplotly()
+ggplotly()
