--- a/_posts/ggplot2/geom_abline/2015-07-20-vline-hline.html
+++ b/_posts/ggplot2/geom_abline/2015-07-20-vline-hline.html
@@ -1,5 +1,5 @@
 ---
-name: use <code>geom_vline</code> with <code>geom_hline</code> 
+name: use <code>geom_vline</code> with <code>geom_hline</code>
 plot_url: https://plot.ly/~MattSundquist/17493/yval-vs-xval/
 language: ggplot2
 suite: geom_abline
@@ -43,4 +43,4 @@ sp <- ggplot(dat, aes(x=xval, y=yval, colour=cond)) + geom_point()
 sp + geom_hline(aes(yintercept=10)) +
     geom_vline(aes(xintercept=11.5), colour="#BB0000", linetype="dashed")
 
-py$ggplotly()
+ggplotly()
