--- a/_posts/ggplot2/geom_bar/2015-07-14-stat-bin.html
+++ b/_posts/ggplot2/geom_bar/2015-07-14-stat-bin.html
@@ -1,9 +1,9 @@
 ---
-name: using <code>stat="bin"</code> with <code>geom_bar</code> 
+name: using <code>stat="bin"</code> with <code>geom_bar</code>
 plot_url: https://plot.ly/~MattSundquist/17602/
 language: ggplot2
 suite: bar
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Bar_and_line_graphs_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Bar_and_line_graphs_(ggplot2)/">Cookbook for R</a>.
 order: 5
 sitemap: false
 ---
@@ -19,5 +19,5 @@ head(tips)
 ggplot(data=tips, aes(x=day)) +
     geom_bar(stat="bin")
 
-py$ggplotly()
+ggplotly()
 
