--- a/_posts/ggplot2/geom_histogram/2015-07-14-facets.html
+++ b/_posts/ggplot2/geom_histogram/2015-07-14-facets.html
@@ -17,8 +17,8 @@ df <- data.frame (type=rep(1:2, each=1000), subtype=rep(c("a","b"), each=500), v
 library(plyr)
 df.text<-ddply(df,.(type,subtype),summarise,mean.value=mean(value))
 
-ggplot(df, aes(x=value, fill=subtype)) + 
+ggplot(df, aes(x=value, fill=subtype)) +
     geom_histogram(position="identity", alpha=0.4)+
     facet_grid(. ~ type)
 
-py$ggplotly()
+ggplotly()
