--- a/_posts/ggplot2/geom_histogram/2015-07-14-probability.html
+++ b/_posts/ggplot2/geom_histogram/2015-07-14-probability.html
@@ -1,5 +1,5 @@
 ---
-name: plot probability with density 
+name: plot probability with density
 plot_url: https://plot.ly/~MattSundquist/18437/density-vs-x/
 language: ggplot2
 suite: histogram
@@ -16,6 +16,6 @@ df <- data.frame(x = rnorm(1000))
 
 ggplot(df, aes(x=x)) +
     geom_histogram(aes(y = ..density..), binwidth=density(df$x)$bw) +
-    geom_density(fill="red", alpha = 0.2) 
+    geom_density(fill="red", alpha = 0.2)
 
-py$ggplotly()
+ggplotly()
