--- a/_posts/ggplot2/geom_line/2015-07-13-lines-meet-segments.html
+++ b/_posts/ggplot2/geom_line/2015-07-13-lines-meet-segments.html
@@ -22,4 +22,4 @@ ggplot(df, aes(x=x, y=y, linetype=fac)) +
     geom_segment(aes(x=2, y=7, xend=7, yend=7), colour="red") +
     scale_linetype_discrete(guide=guide_legend(override.aes=aes(colour="blue")))
 
-py$ggplotly()
+ggplotly()
