--- a/_posts/ggplot2/geom_line/2015-07-21-add-points.html
+++ b/_posts/ggplot2/geom_line/2015-07-21-add-points.html
@@ -3,7 +3,7 @@ name: add points to <code>geom_line</code>
 plot_url: https://plot.ly/~MattSundquist/17623/y-vs-x/
 language: ggplot2
 suite: geom_line
-description: Inspired by <a href="http://stackoverflow.com/questions/12332298/ggplot2-add-points-to-geom-line?rq=1">Stack Overflow</a>. 
+description: Inspired by <a href="http://stackoverflow.com/questions/12332298/ggplot2-add-points-to-geom-line?rq=1">Stack Overflow</a>.
 order: 8
 sitemap: false
 ---
@@ -19,4 +19,4 @@ ggplot(d, aes(x=x, y=y))+geom_line()
 thinned <- floor(seq(from=1,to=dim(d)[1],length=70))
 ggplot(d, aes(x=x, y=y))+geom_line()+geom_point(data=d[thinned,],aes(x=x,y=y))
 
-py$ggplotly()
+ggplotly()
