--- a/_posts/ggplot2/geom_line/2015-07-22-categorical-x.html
+++ b/_posts/ggplot2/geom_line/2015-07-22-categorical-x.html
@@ -28,4 +28,4 @@ ggplot(data=datn2, aes(x=dose, y=length, group=supp, colour=supp)) +
     geom_line() +
     geom_point()
 
-py$ggplotly()
+ggplotly()
