--- a/_posts/ggplot2/geom_point/2015-07-13-smoothed-fit.html
+++ b/_posts/ggplot2/geom_point/2015-07-13-smoothed-fit.html
@@ -20,7 +20,7 @@ dat <- data.frame(cond = rep(c("A", "B"), each=10),
 ggplot(dat, aes(x=xvar, y=yvar)) +
     geom_point(shape=1) +    # Use hollow circles
     geom_smooth()            # Add a loess smoothed fit curve with confidence region
-# > geom_smooth: method="auto" and size of largest group is less than 1000, so using loess. 
+# > geom_smooth: method="auto" and size of largest group is less than 1000, so using loess.
 # Use 'method = x' to change the smoothing method.
 
-py$ggplotly()
+ggplotly()
