--- a/_posts/ggplot2/geom_point/2015-07-20-adding-points.html
+++ b/_posts/ggplot2/geom_point/2015-07-20-adding-points.html
@@ -15,4 +15,4 @@ library(plotly)
 p<-ggplot(df, aes(time,value, group=side, colour=side)) + geom_line(size=1)
 p<-p+geom_point()
 
-py$ggplotly()
+ggplotly()
