--- a/_posts/ggplot2/geom_point/2015-07-20-regression-lines.html
+++ b/_posts/ggplot2/geom_point/2015-07-20-regression-lines.html
@@ -1,5 +1,5 @@
 ---
-name: adding regressions with <code>geom_abline</code> 
+name: adding regressions with <code>geom_abline</code>
 plot_url: https://plot.ly/~MattSundquist/17551/y-vs-x/
 language: ggplot2
 suite: geom_point
@@ -21,4 +21,4 @@ qplot(data=dd, x=x, y=y, color=fac)+
     geom_abline(slope=coef["x:faca"], intercept=coef["(Intercept)"])+
     geom_abline(slope=coef["x:facb"], intercept=coef["(Intercept)"])
 
-py$ggplotly()
+ggplotly()
