--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -102,7 +102,7 @@ ggiris
                 And call the ggplotly() method to convert your ggplot2 plot into a Plotly plot:
             </p>
 
-            <pre><code>r &lt;- py$ggplotly(ggiris)</code></pre>
+            <pre><code>r &lt;- ggplotly(ggiris)</code></pre>
 
             <p >
                 Your online, interactive, collaborative plot lives at this URL:
