--- a/_posts/ggplot2/line_and_scatter/2015-04-09-gg-alpha.html
+++ b/_posts/ggplot2/line_and_scatter/2015-04-09-gg-alpha.html
@@ -13,6 +13,6 @@ library(plotly)
 
 prettyPlot &lt;- ggplot(data=diamonds, aes(x=carat, y=price, colour=clarity))
 prettyPlot &lt;- prettyPlot + geom_point(alpha = 1/10)
-out &lt;- py$ggplotly(prettyPlot)
+out &lt;- ggplotly(prettyPlot)
 
 plotly_url &lt;- out$response$url
