--- a/_posts/ggplot2/line_and_scatter/2015-04-09-gg-basic-line.html
+++ b/_posts/ggplot2/line_and_scatter/2015-04-09-gg-basic-line.html
@@ -18,5 +18,5 @@ orange &lt;- qplot(
               colour = Tree,
               geom = "line")
 
-out &lt;- py$ggplotly(orange)
+out &lt;- ggplotly(orange)
 plotly_url &lt;- out$response$url
