--- a/_posts/ggplot2/line_and_scatter/2015-04-09-gg-basic-scatter.html
+++ b/_posts/ggplot2/line_and_scatter/2015-04-09-gg-basic-scatter.html
@@ -13,5 +13,5 @@ library(plotly)
 
 ggiris &lt;- qplot(Petal.Width, Sepal.Length, data = iris, color = Species)
 
-out &lt;- py$ggplotly(ggiris)
+out &lt;- ggplotly(ggiris)
 plotly_url &lt;- out$response$url
