--- a/_posts/ggplot2/line_and_scatter/2015-04-09-gg-geom_segment.html
+++ b/_posts/ggplot2/line_and_scatter/2015-04-09-gg-geom_segment.html
@@ -13,5 +13,5 @@ library(plotly)
 
 p &lt;- ggplot(seals, aes(x = long, y = lat))
 
-out &lt;- py$ggplotly((p &lt;- p + geom_segment(aes(xend = long + delta_long, yend = lat + delta_lat))))
+out &lt;- ggplotly((p &lt;- p + geom_segment(aes(xend = long + delta_long, yend = lat + delta_lat))))
 plotly_url &lt;- out$response$url
