--- a/_posts/ggplot2/log_scale/2015-07-21-density-log.html
+++ b/_posts/ggplot2/log_scale/2015-07-21-density-log.html
@@ -1,5 +1,5 @@
 ---
-name: log scale using <code>geom_density</code> 
+name: log scale using <code>geom_density</code>
 plot_url: https://plot.ly/~MattSundquist/17589/
 language: ggplot2
 suite: log
@@ -14,4 +14,4 @@ library(plotly)
 
 qplot(rating, y = ..scaled.., data=movies, geom="density", log="x")
 
-py$ggplotly()
+ggplotly()
