--- a/_posts/ggplot2/log_scale/2015-07-21-log_scale.html
+++ b/_posts/ggplot2/log_scale/2015-07-21-log_scale.html
@@ -12,8 +12,8 @@ sitemap: false
 
 library(plotly)
 
-ggplot(diamonds, aes(color, log10(price))) + 
-    geom_boxplot() + 
+ggplot(diamonds, aes(color, log10(price))) +
+    geom_boxplot() +
     scale_y_continuous("Price, log10-scaling")
 
-py$ggplotly()
+ggplotly()
