--- a/_posts/ggplot2/smooth/2015-07-14-titanic-plot.html
+++ b/_posts/ggplot2/smooth/2015-07-14-titanic-plot.html
@@ -54,4 +54,4 @@ p <- p + geom_ribbon(data = sim.data, aes(y = mean, ymin = lo, ymax = hi),
                      alpha = .25)
 p + labs(x = "Passenger Age", y = "Probability of Survival")
 
-py$ggplotly()
+ggplotly()
