--- a/_posts/ggplot2/smooth/2015-07-15-regression-line-facet-grid.html
+++ b/_posts/ggplot2/smooth/2015-07-15-regression-line-facet-grid.html
@@ -1,5 +1,5 @@
 ---
-name: <code>stat_smooth</code> with <code>facet_grid</code> 
+name: <code>stat_smooth</code> with <code>facet_grid</code>
 plot_url: https://plot.ly/~MattSundquist/17156
 language: ggplot2
 suite: smooth
@@ -21,8 +21,8 @@ df$f1 <- f1
 df$f2 <- f2
 
 ggplot(df,aes(x=x,y=y)) +
-    geom_point() + 
-    facet_grid(f1~f2) + 
+    geom_point() +
+    facet_grid(f1~f2) +
     stat_smooth(method="lm")
 
-py$ggplotly()
+ggplotly()
