--- a/_posts/ggplot2/time-series/2015-07-23-by-year.html
+++ b/_posts/ggplot2/time-series/2015-07-23-by-year.html
@@ -29,6 +29,6 @@ ggplot(data = df,
     geom_point() +
     geom_line() +
     facet_grid(facets = Year ~ .) +
-    scale_x_date(labels = function(x) format(x, "%d-%b")) 
+    scale_x_date(labels = function(x) format(x, "%d-%b"))
 
-py$ggplotly()
+ggplotly()
