--- a/_posts/ggplot2/time-series/2015-07-23-positive-negative.html
+++ b/_posts/ggplot2/time-series/2015-07-23-positive-negative.html
@@ -25,7 +25,7 @@ p <- ggplot(mymelt, aes(x = mydate, y = value)) +
     theme(axis.text.x = element_text(size = 5, angle = 90),
           axis.text.y = element_text(size = 8),
           axis.title.x = element_text(vjust = 0),
-          axis.ticks = element_blank(), 
+          axis.ticks = element_blank(),
           panel.grid.minor = element_blank())
 
-py$ggplotly()
+ggplotly()
