--- a/_posts/tutorials/2015-06-30-collaborate.html
+++ b/_posts/tutorials/2015-06-30-collaborate.html
@@ -63,7 +63,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Graphing and data analysis need a Rosetta Stone to solve the fragmentation and collaboration problem. 
+<p>Graphing and data analysis need a Rosetta Stone to solve the fragmentation and collaboration problem.
 Plotly is about bridging the divide and serving as an interoperable platform for analysis and plotting. You can import, edit, and plot data using scripts and data from Python, MATLAB, R, Julia, Perl, REST, Arduino, Raspberry Pi, or Excel. So can your team.</p>
 <p><em>All in the same online plot</em>.</p>
 <p>Read on to learn more, or run <code>$ pip install plotly</code> and copy and paste the code below. Plotly is online, meaning no downloads or installations necessary.</p>
@@ -184,7 +184,7 @@ Plotly is about bridging the divide and serving as an interoperable platform for
     <span class="n">plt</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">x</span><span class="p">,</span><span class="n">y</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="s">r&#39;$v_{}$&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">))</span>
 
 <span class="n">plt</span><span class="o">.</span><span class="n">xlabel</span><span class="p">(</span><span class="s">&quot;X&quot;</span><span class="p">)</span>
-<span class="n">plt</span><span class="o">.</span><span class="n">ylabel</span><span class="p">(</span><span class="s">&quot;P(X)&quot;</span><span class="p">)</span>        
+<span class="n">plt</span><span class="o">.</span><span class="n">ylabel</span><span class="p">(</span><span class="s">&quot;P(X)&quot;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -660,15 +660,15 @@ AABJRU5ErkJggg==
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">library</span><span class="p">(</span><span class="n">WDI</span><span class="p">)</span>
 <span class="n">library</span><span class="p">(</span><span class="n">ggplot2</span><span class="p">)</span>
- 
+
 <span class="c">#Grab GNI per capita data for Chile, Hungary and Uruguay</span>
- 
+
 <span class="n">dat</span> <span class="o">=</span> <span class="n">WDI</span><span class="p">(</span><span class="n">indicator</span><span class="o">=</span><span class="s">&#39;NY.GNP.PCAP.CD&#39;</span><span class="p">,</span> <span class="n">country</span><span class="o">=</span><span class="n">c</span><span class="p">(</span><span class="s">&#39;CL&#39;</span><span class="p">,</span><span class="s">&#39;HU&#39;</span><span class="p">,</span><span class="s">&#39;UY&#39;</span><span class="p">),</span> <span class="n">start</span><span class="o">=</span><span class="mi">1960</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="mi">2012</span><span class="p">)</span>
- 
+
 <span class="c">#a quick plot with legend, title and label</span>
- 
-<span class="n">wb</span> <span class="o">&lt;-</span> <span class="n">ggplot</span><span class="p">(</span><span class="n">dat</span><span class="p">,</span> <span class="n">aes</span><span class="p">(</span><span class="n">year</span><span class="p">,</span> <span class="n">NY</span><span class="o">.</span><span class="n">GNP</span><span class="o">.</span><span class="n">PCAP</span><span class="o">.</span><span class="n">CD</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">country</span><span class="p">))</span> <span class="o">+</span> <span class="n">geom_line</span><span class="p">()</span> 
-<span class="o">+</span>     <span class="n">xlab</span><span class="p">(</span><span class="s">&#39;Year&#39;</span><span class="p">)</span> <span class="o">+</span> <span class="n">ylab</span><span class="p">(</span><span class="s">&#39;GDI per capita (Atlas Method USD)&#39;</span><span class="p">)</span> 
+
+<span class="n">wb</span> <span class="o">&lt;-</span> <span class="n">ggplot</span><span class="p">(</span><span class="n">dat</span><span class="p">,</span> <span class="n">aes</span><span class="p">(</span><span class="n">year</span><span class="p">,</span> <span class="n">NY</span><span class="o">.</span><span class="n">GNP</span><span class="o">.</span><span class="n">PCAP</span><span class="o">.</span><span class="n">CD</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">country</span><span class="p">))</span> <span class="o">+</span> <span class="n">geom_line</span><span class="p">()</span>
+<span class="o">+</span>     <span class="n">xlab</span><span class="p">(</span><span class="s">&#39;Year&#39;</span><span class="p">)</span> <span class="o">+</span> <span class="n">ylab</span><span class="p">(</span><span class="s">&#39;GDI per capita (Atlas Method USD)&#39;</span><span class="p">)</span>
 <span class="o">+</span>     <span class="n">labs</span><span class="p">(</span><span class="n">title</span> <span class="o">&lt;-</span> <span class="s">&quot;GNI Per Capita ($USD Atlas Method)&quot;</span><span class="p">)</span>
 
 <span class="n">py</span><span class="err">$</span><span class="n">ggplotly</span><span class="p">(</span><span class="n">wb</span><span class="p">)</span>
@@ -684,7 +684,7 @@ AABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We can add <code>py$ggplotly</code> to the call, which will draw the figure with Plotly's <a href="https://plot.ly/r">R API</a>. Then we can call it in a Notebook. You can similarly call any Plotly graph with the username and graph id pair.</p>
+<p>We can add <code>ggplotly</code> to the call, which will draw the figure with Plotly's <a href="https://plot.ly/r">R API</a>. Then we can call it in a Notebook. You can similarly call any Plotly graph with the username and graph id pair.</p>
 
 </div>
 </div>
@@ -1056,7 +1056,7 @@ AABJRU5ErkJggg==
 <div class="prompt input_prompt">In&nbsp;[19]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">ggplot</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">get_figure</span><span class="p">(</span><span class="s">&#39;MattSundquist&#39;</span><span class="p">,</span> <span class="s">&#39;1339&#39;</span><span class="p">)</span> 
+<div class=" highlight hl-ipython2"><pre><span class="n">ggplot</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">get_figure</span><span class="p">(</span><span class="s">&#39;MattSundquist&#39;</span><span class="p">,</span> <span class="s">&#39;1339&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -2044,15 +2044,15 @@ AABJRU5ErkJggg==
 
 class Figure(PlotlyDict)
  |  A dictionary-like object representing a figure to be rendered in plotly.
- |  
+ |
  |      This is the container for all things to be rendered in a figure.
- |  
+ |
  |      For help with setting up subplots, run:
  |      &#96;help(plotly.tools.get_subplots)&#96;
- |  
- |      
+ |
+ |
  |  Quick method reference:
- |  
+ |
  |      Figure.update(changes)
  |      Figure.strip_style()
  |      Figure.get_data()
@@ -2060,78 +2060,78 @@ class Figure(PlotlyDict)
  |      Figure.validate()
  |      Figure.to_string()
  |      Figure.force_clean()
- |  
+ |
  |  Valid keys:
- |  
+ |
  |      data [required=False] (value=Data object | dictionary-like):
  |          A list-like array of the data that is to be visualized.
- |  
+ |
  |          For more, run &#96;help(plotly.graph_objs.Data)&#96;
- |  
+ |
  |      layout [required=False] (value=Layout object | dictionary-like):
  |          The layout dictionary-like object contains axes information, gobal
  |          settings, and layout information related to the rendering of the
  |          figure.
- |  
+ |
  |          For more, run &#96;help(plotly.graph_objs.Layout)&#96;
- |  
+ |
  |  Method resolution order:
  |      Figure
  |      PlotlyDict
  |      __builtin__.dict
  |      __builtin__.object
- |  
+ |
  |  Methods defined here:
- |  
+ |
  |  __init__(self, *args, **kwargs)
- |  
+ |
  |  ----------------------------------------------------------------------
  |  Methods inherited from PlotlyDict:
- |  
+ |
  |  force_clean(self)
  |      Attempts to convert to graph_objs and call force_clean() on values.
- |      
+ |
  |      Calling force_clean() on a PlotlyDict will ensure that the object is
  |      valid and may be sent to plotly. This process will also remove any
  |      entries that end up with a length == 0.
- |      
+ |
  |      Careful! This will delete any invalid entries *silently*.
- |  
+ |
  |  get_data(self)
  |      Returns the JSON for the plot with non-data elements stripped.
- |  
+ |
  |  strip_style(self)
  |      Strip style from the current representation.
- |      
+ |
  |      All PlotlyDicts and PlotlyLists are guaranteed to survive the
  |      stripping process, though they made be left empty. This is allowable.
- |      
+ |
  |      Keys that will be stripped in this process are tagged with
  |      &#96;&apos;type&apos;: &apos;style&apos;&#96; in the INFO dictionary listed in graph_objs_meta.py.
- |      
+ |
  |      This process first attempts to convert nested collections from dicts
  |      or lists to subclasses of PlotlyList/PlotlyDict. This process forces
  |      a validation, which may throw exceptions.
- |      
+ |
  |      Then, each of these objects call &#96;strip_style&#96; on themselves and so
  |      on, recursively until the entire structure has been validated and
  |      stripped.
- |  
+ |
  |  to_graph_objs(self)
  |      Walk obj, convert dicts and lists to plotly graph objs.
- |      
+ |
  |      For each key in the object, if it corresponds to a special key that
  |      should be associated with a graph object, the ordinary dict or list
  |      will be reinitialized as a special PlotlyDict or PlotlyList of the
  |      appropriate &#96;kind&#96;.
- |  
+ |
  |  to_string(self, level=0, indent=4, eol=&apos;\n&apos;, pretty=True, max_chars=80)
  |      Returns a formatted string showing graph_obj constructors.
- |      
+ |
  |              Example:
- |      
+ |
  |                  print obj.to_string()
- |      
+ |
  |              Keyword arguments:
  |              level (default = 0) -- set number of indentations to start with
  |              indent (default = 4) -- set indentation amount
@@ -2139,17 +2139,17 @@ class Figure(PlotlyDict)
  |      &apos;) -- set end of line character(s)
  |              pretty (default = True) -- curtail long list output with a &apos;...&apos;
  |              max_chars (default = 80) -- set max characters per line
- |  
+ |
  |  update(self, dict1=None, **dict2)
  |      Update current dict with dict1 and then dict2.
- |      
+ |
  |      This recursively updates the structure of the original dictionary-like
  |      object with the new entries in the second and third objects. This
  |      allows users to update with large, nested structures.
- |      
+ |
  |      Note, because the dict2 packs up all the keyword arguments, you can
  |      specify the changes as a list of keyword agruments.
- |      
+ |
  |      Examples:
  |      # update with dict
  |      obj = Layout(title=&apos;my title&apos;, xaxis=XAxis(range=[0,1], domain=[0,1]))
@@ -2157,157 +2157,157 @@ class Figure(PlotlyDict)
  |      obj.update(update_dict)
  |      obj
  |      {&apos;title&apos;: &apos;new title&apos;, &apos;xaxis&apos;: {&apos;range&apos;: [0,1], &apos;domain&apos;: [0,.8]}}
- |      
+ |
  |      # update with list of keyword arguments
  |      obj = Layout(title=&apos;my title&apos;, xaxis=XAxis(range=[0,1], domain=[0,1]))
  |      obj.update(title=&apos;new title&apos;, xaxis=dict(domain=[0,.8]))
  |      obj
  |      {&apos;title&apos;: &apos;new title&apos;, &apos;xaxis&apos;: {&apos;range&apos;: [0,1], &apos;domain&apos;: [0,.8]}}
- |      
+ |
  |      This &apos;fully&apos; supports duck-typing in that the call signature is
  |      identical, however this differs slightly from the normal update
  |      method provided by Python&apos;s dictionaries.
- |  
+ |
  |  validate(self)
  |      Recursively check the validity of the keys in a PlotlyDict.
- |      
+ |
  |      The valid keys constitute the entries in each object
  |      dictionary in INFO stored in graph_objs_meta.py.
- |      
+ |
  |      The validation process first requires that all nested collections be
  |      converted to the appropriate subclass of PlotlyDict/PlotlyList. Then,
  |      each of these objects call &#96;validate&#96; and so on, recursively,
  |      until the entire object has been validated.
- |  
+ |
  |  ----------------------------------------------------------------------
  |  Data descriptors inherited from PlotlyDict:
- |  
+ |
  |  __dict__
  |      dictionary for instance variables (if defined)
- |  
+ |
  |  __weakref__
  |      list of weak references to the object (if defined)
- |  
+ |
  |  ----------------------------------------------------------------------
  |  Data and other attributes inherited from PlotlyDict:
- |  
+ |
  |  __metaclass__ = &lt;class &apos;plotly.graph_objs.graph_objs.DictMeta&apos;&gt;
  |      A meta class for PlotlyDict class creation.
- |      
+ |
  |      The sole purpose of this meta class is to properly create the __doc__
  |      attribute so that running help(Obj), where Obj is a subclass of PlotlyDict,
  |      will return information about key-value pairs for that object.
- |  
+ |
  |  ----------------------------------------------------------------------
  |  Methods inherited from __builtin__.dict:
- |  
+ |
  |  __cmp__(...)
  |      x.__cmp__(y) &lt;==&gt; cmp(x,y)
- |  
+ |
  |  __contains__(...)
  |      D.__contains__(k) -&gt; True if D has a key k, else False
- |  
+ |
  |  __delitem__(...)
  |      x.__delitem__(y) &lt;==&gt; del x[y]
- |  
+ |
  |  __eq__(...)
  |      x.__eq__(y) &lt;==&gt; x==y
- |  
+ |
  |  __ge__(...)
  |      x.__ge__(y) &lt;==&gt; x&gt;=y
- |  
+ |
  |  __getattribute__(...)
  |      x.__getattribute__(&apos;name&apos;) &lt;==&gt; x.name
- |  
+ |
  |  __getitem__(...)
  |      x.__getitem__(y) &lt;==&gt; x[y]
- |  
+ |
  |  __gt__(...)
  |      x.__gt__(y) &lt;==&gt; x&gt;y
- |  
+ |
  |  __iter__(...)
  |      x.__iter__() &lt;==&gt; iter(x)
- |  
+ |
  |  __le__(...)
  |      x.__le__(y) &lt;==&gt; x&lt;=y
- |  
+ |
  |  __len__(...)
  |      x.__len__() &lt;==&gt; len(x)
- |  
+ |
  |  __lt__(...)
  |      x.__lt__(y) &lt;==&gt; x&lt;y
- |  
+ |
  |  __ne__(...)
  |      x.__ne__(y) &lt;==&gt; x!=y
- |  
+ |
  |  __repr__(...)
  |      x.__repr__() &lt;==&gt; repr(x)
- |  
+ |
  |  __setitem__(...)
  |      x.__setitem__(i, y) &lt;==&gt; x[i]=y
- |  
+ |
  |  __sizeof__(...)
  |      D.__sizeof__() -&gt; size of D in memory, in bytes
- |  
+ |
  |  clear(...)
  |      D.clear() -&gt; None.  Remove all items from D.
- |  
+ |
  |  copy(...)
  |      D.copy() -&gt; a shallow copy of D
- |  
+ |
  |  fromkeys(...)
  |      dict.fromkeys(S[,v]) -&gt; New dict with keys from S and values equal to v.
  |      v defaults to None.
- |  
+ |
  |  get(...)
  |      D.get(k[,d]) -&gt; D[k] if k in D, else d.  d defaults to None.
- |  
+ |
  |  has_key(...)
  |      D.has_key(k) -&gt; True if D has a key k, else False
- |  
+ |
  |  items(...)
  |      D.items() -&gt; list of D&apos;s (key, value) pairs, as 2-tuples
- |  
+ |
  |  iteritems(...)
  |      D.iteritems() -&gt; an iterator over the (key, value) items of D
- |  
+ |
  |  iterkeys(...)
  |      D.iterkeys() -&gt; an iterator over the keys of D
- |  
+ |
  |  itervalues(...)
  |      D.itervalues() -&gt; an iterator over the values of D
- |  
+ |
  |  keys(...)
  |      D.keys() -&gt; list of D&apos;s keys
- |  
+ |
  |  pop(...)
  |      D.pop(k[,d]) -&gt; v, remove specified key and return the corresponding value.
  |      If key is not found, d is returned if given, otherwise KeyError is raised
- |  
+ |
  |  popitem(...)
  |      D.popitem() -&gt; (k, v), remove and return some (key, value) pair as a
  |      2-tuple; but raise KeyError if D is empty.
- |  
+ |
  |  setdefault(...)
  |      D.setdefault(k[,d]) -&gt; D.get(k,d), also set D[k]=d if k not in D
- |  
+ |
  |  values(...)
  |      D.values() -&gt; list of D&apos;s values
- |  
+ |
  |  viewitems(...)
  |      D.viewitems() -&gt; a set-like object providing a view on D&apos;s items
- |  
+ |
  |  viewkeys(...)
  |      D.viewkeys() -&gt; a set-like object providing a view on D&apos;s keys
- |  
+ |
  |  viewvalues(...)
  |      D.viewvalues() -&gt; an object providing a view on D&apos;s values
- |  
+ |
  |  ----------------------------------------------------------------------
  |  Data and other attributes inherited from __builtin__.dict:
- |  
+ |
  |  __hash__ = None
- |  
+ |
  |  __new__ = &lt;built-in method __new__ of type object&gt;
  |      T.__new__(S, ...) -&gt; a new object with type S, a subtype of T
 
