--- a/_posts/ggplot2/box/2015-07-15-boxplot-facet.html
+++ b/_posts/ggplot2/box/2015-07-15-boxplot-facet.html
@@ -1,5 +1,5 @@
 ---
-name: facets with box plots 
+name: facets with box plots
 plot_url: https://plot.ly/~MattSundquist/17059
 language: ggplot2
 suite: box
@@ -23,7 +23,7 @@ y.4<-rnorm(100)
 
 df<- (as.data.frame(cbind(x,y.1,y.2,y.3,y.4)))
 
-dfmelt<-melt(df, measure.vars = 2:5)    
+dfmelt<-melt(df, measure.vars = 2:5)
 
 ggplot(dfmelt, aes(x=factor(round_any(x,0.5)), y=value,fill=variable))+
     geom_boxplot()+
@@ -31,4 +31,4 @@ ggplot(dfmelt, aes(x=factor(round_any(x,0.5)), y=value,fill=variable))+
     labs(x="X (binned)")+
     theme(axis.text.x=element_text(angle=-90, vjust=0.4,hjust=1))
 
-py$ggplotly()
+ggplotly()
