--- a/_posts/ggplot2/box/2015-07-28-geom_bar-flipped.html
+++ b/_posts/ggplot2/box/2015-07-28-geom_bar-flipped.html
@@ -1,9 +1,9 @@
 ---
-name: <code>geom_boxplot</code> flipped 
+name: <code>geom_boxplot</code> flipped
 plot_url: https://plot.ly/~MattSundquist/18187/cond-vs-rating/
 language: ggplot2
 suite: box
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Plotting_distributions_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Plotting_distributions_(ggplot2)/">Cookbook for R</a>.
 order: 3
 sitemap: false
 ---
@@ -15,7 +15,7 @@ library(plotly)
 set.seed(1234)
 dat <- data.frame(cond = factor(rep(c("A","B"), each=200)), rating = c(rnorm(200),rnorm(200, mean=.8)))
 
-ggplot(dat, aes(x=cond, y=rating, fill=cond)) + geom_boxplot() + 
+ggplot(dat, aes(x=cond, y=rating, fill=cond)) + geom_boxplot() +
     guides(fill=FALSE) + coord_flip()
 
-py$ggplotly()
+ggplotly()
