--- a/_posts/ggplot2/facets/2015-07-14-free-scale-histogram.html
+++ b/_posts/ggplot2/facets/2015-07-14-free-scale-histogram.html
@@ -1,9 +1,9 @@
 ---
-name: free scale with histogram 
+name: free scale with histogram
 plot_url: https://plot.ly/~MattSundquist/16915
 language: ggplot2
 suite: facets
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Cookbook for R</a>.
 order: 7
 sitemap: false
 ---
@@ -18,4 +18,4 @@ hp <- ggplot(tips, aes(x=total_bill)) + geom_histogram(binwidth=2,colour="white"
 # Histogram of total_bill, divided by sex and smoker
 hp + facet_grid(sex ~ smoker)
 
-py$ggplotly()
+ggplotly()
