--- a/_posts/ggplot2/facets/2015-07-15-facet-with-smoothing.html
+++ b/_posts/ggplot2/facets/2015-07-15-facet-with-smoothing.html
@@ -1,9 +1,9 @@
 ---
-name: <code>facet_wrap</code> with <code>stat_smooth</code> 
+name: <code>facet_wrap</code> with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17004
 language: ggplot2
 suite: facets
-description: Inspired by <a href="http://stackoverflow.com/questions/8662018/ggplot2-stat-smooth-for-logistic-outcomes-with-facet-wrap-returning-full-or">Stack Overflow</a>. 
+description: Inspired by <a href="http://stackoverflow.com/questions/8662018/ggplot2-stat-smooth-for-logistic-outcomes-with-facet-wrap-returning-full-or">Stack Overflow</a>.
 order: 11
 sitemap: false
 ---
@@ -19,18 +19,18 @@ df <- data.frame(location = rep(LETTERS[1:4], n),
                  score    = sample(45:80, 4*n, replace = TRUE))
 
 df$p    <- inv.logit(0.075 * df$score + rep(c(-4.5, -5, -6, -2.8), n))
-df$pass <- sapply(df$p, function(x){rbinom(1, 1, x)}) 
+df$pass <- sapply(df$p, function(x){rbinom(1, 1, x)})
 
 preds <- predict(g, newdata = new.data, type = 'response',se = TRUE)
 new.data$pred.full <- preds$fit
 
 new.data$ymin <- new.data$pred.full - 2*preds$se.fit
-new.data$ymax <- new.data$pred.full + 2*preds$se.fit  
+new.data$ymax <- new.data$pred.full + 2*preds$se.fit
 
-ggplot(df,aes(x = score, y = pass)) + 
-    facet_wrap(~location) + 
-    geom_point(size=3) + 
+ggplot(df,aes(x = score, y = pass)) +
+    facet_wrap(~location) +
+    geom_point(size=3) +
     geom_ribbon(data = new.data,aes(y = pred.full, ymin = ymin, ymax = ymax),alpha = 0.25) +
     geom_line(data = new.data,aes(y = pred.full),colour = "blue")
 
-py$ggplotly()
+ggplotly()
