--- a/_posts/ggplot2/geom_abline/2015-07-17-histogram-means.html
+++ b/_posts/ggplot2/geom_abline/2015-07-17-histogram-means.html
@@ -15,9 +15,9 @@ library(plyr)
 cdat <- ddply(dat, "cond", summarise, rating.mean=mean(rating))
 
 # With mean lines
-ggplot(dat, aes(x=rating)) + geom_histogram(binwidth=.5, colour="black", fill="white") + 
+ggplot(dat, aes(x=rating)) + geom_histogram(binwidth=.5, colour="black", fill="white") +
     facet_grid(cond ~ .) +
     geom_vline(data=cdat, aes(xintercept=rating.mean),
                linetype="dashed", size=1, colour="red")
 
-py$ggplotly()
+ggplotly()
