--- a/_posts/ggplot2/geom_abline/2015-07-17-overlaid-histogram.html
+++ b/_posts/ggplot2/geom_abline/2015-07-17-overlaid-histogram.html
@@ -20,4 +20,4 @@ ggplot(dat, aes(x=rating, fill=cond)) +
     geom_vline(data=cdat, aes(xintercept=rating.mean),
                linetype="dashed", size=1)
 
-py$ggplotly()
+ggplotly()
