--- a/_posts/ggplot2/geom_bar/2015-07-14-manual-colors.html
+++ b/_posts/ggplot2/geom_bar/2015-07-14-manual-colors.html
@@ -3,7 +3,7 @@ name: <code>geom_bar</code> with manual colors
 plot_url: https://plot.ly/~MattSundquist/17608/total-bill-vs-time/
 language: ggplot2
 suite: bar
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Bar_and_line_graphs_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Bar_and_line_graphs_(ggplot2)/">Cookbook for R</a>.
 order: 7
 sitemap: false
 ---
@@ -22,4 +22,4 @@ ggplot(data=dat1, aes(x=time, y=total_bill, fill=sex)) +
     geom_bar(stat="identity", position=position_dodge(), colour="black") +
     scale_fill_manual(values=c("#999999", "#E69F00"))
 
-py$ggplotly()
+ggplotly()
