--- a/_posts/ggplot2/geom_bar/2015-07-14-variable-order-bar.html
+++ b/_posts/ggplot2/geom_bar/2015-07-14-variable-order-bar.html
@@ -1,5 +1,5 @@
 ---
-name: ordering variable in <code>geom_bar</code> 
+name: ordering variable in <code>geom_bar</code>
 plot_url: https://plot.ly/~MattSundquist/17678/y-vs-x/
 language: ggplot2
 suite: bar
@@ -16,9 +16,9 @@ library(plyr)
 dane<-data.frame(x=1:10,y=seq(-5,4),g=rep(c('A','B'),each=5))
 dane$x<-as.factor(dane$x)
 
-ggplot(data=dane,aes(x=x,y=y,fill=g)) + 
+ggplot(data=dane,aes(x=x,y=y,fill=g)) +
     geom_bar(subset=.(g=='A'),stat='identity') +
     geom_bar(subset=.(g=='B'),stat='identity') +
     scale_x_discrete(drop=FALSE)
 
-py$ggplotly()
+ggplotly()
