--- a/_posts/ggplot2/geom_bar/2015-07-21-bar-theme.html
+++ b/_posts/ggplot2/geom_bar/2015-07-21-bar-theme.html
@@ -3,7 +3,7 @@ name: <code>geom_bar</code> with styles and theme
 plot_url: https://plot.ly/~MattSundquist/17617/average-bill-for-2-people/
 language: ggplot2
 suite: bar
-description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Bar_and_line_graphs_(ggplot2)/">Cookbook for R</a>. 
+description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Bar_and_line_graphs_(ggplot2)/">Cookbook for R</a>.
 order: 8
 sitemap: false
 ---
@@ -19,7 +19,7 @@ dat1 <- data.frame(
 )
 
 # A bar graph
-ggplot(data=dat1, aes(x=time, y=total_bill, fill=sex)) + 
+ggplot(data=dat1, aes(x=time, y=total_bill, fill=sex)) +
     geom_bar(colour="black", stat="identity",
              position=position_dodge(),
              size=.3) +                        # Thinner lines
@@ -27,4 +27,4 @@ ggplot(data=dat1, aes(x=time, y=total_bill, fill=sex)) +
     ggtitle("Average bill for 2 people") +     # Set title
     theme_bw()
 
-py$ggplotly()
+ggplotly()
