--- a/_posts/ggplot2/geom_histogram/2015-07-14-lines.html
+++ b/_posts/ggplot2/geom_histogram/2015-07-14-lines.html
@@ -12,15 +12,15 @@ sitemap: false
 
 library(plotly)
 
-df1 <- data.frame(cond = factor( rep(c("A","B"), each=200) ), 
+df1 <- data.frame(cond = factor( rep(c("A","B"), each=200) ),
                   rating = c(rnorm(200),rnorm(200, mean=.8)))
 
 df2 <- data.frame(x=c(.5,1),cond=factor(c("A","B")))
 
-ggplot(data=df1, aes(x=rating, fill=cond)) + 
+ggplot(data=df1, aes(x=rating, fill=cond)) +
     geom_vline(data=df2,aes(xintercept=x,linetype=factor(cond)),
                show_guide=TRUE) +
     geom_histogram(binwidth=.5, position="dodge") +
     geom_vline(xintercep=df2$x,linetype=c(1,1))
 
-py$ggplotly()
+ggplotly()
