--- a/_posts/ggplot2/geom_point/2015-07-13-horizontal-line.html
+++ b/_posts/ggplot2/geom_point/2015-07-13-horizontal-line.html
@@ -1,5 +1,5 @@
 ---
-name: add horizontal line with <code>geom_segment</code> 
+name: add horizontal line with <code>geom_segment</code>
 plot_url: https://plot.ly/~MattSundquist/17502/qsec-vs-mpg/
 language: ggplot2
 suite: geom_point
@@ -14,5 +14,5 @@ library(plotly)
 
 ggplot(mtcars,aes(mpg,qsec))+geom_point()+
   geom_segment(aes(x=15,xend=20,y=18,yend=18))
-  
-py$ggplotly()
+
+ggplotly()
