--- a/_posts/ggplot2/line_and_scatter/2015-04-09-gg-line-scatter.html
+++ b/_posts/ggplot2/line_and_scatter/2015-04-09-gg-line-scatter.html
@@ -20,5 +20,5 @@ grid &lt;- with(mtcars, expand.grid(
 grid$mpg &lt;- stats::predict(model, newdata=grid)
 
 viz2 &lt;- qplot(wt, mpg, data=mtcars, colour=factor(cyl)) + geom_line(data=grid)
-out &lt;- py$ggplotly(viz2)
+out &lt;- ggplotly(viz2)
 plotly_url &lt;- out$response$url
