--- a/_posts/ggplot2/smooth/2015-07-14-different-trend-lines.html
+++ b/_posts/ggplot2/smooth/2015-07-14-different-trend-lines.html
@@ -21,6 +21,6 @@ ggplot(DF, aes(x = x, y = y)) + geom_point() +
     stat_smooth(method = 'lm', aes(colour = 'linear'), se = FALSE) +
     stat_smooth(method = 'lm', formula = y ~ poly(x,2), aes(colour = 'polynomial'), se= FALSE) +
     stat_smooth(method = 'nls', formula = y ~ a * log(x) +b, aes(colour = 'logarithmic'), se = FALSE, start = list(a=1,b=1)) +
-    stat_smooth(method = 'nls', formula = y ~ a*exp(b *x), aes(colour = 'Exponential'), se = FALSE, start = list(a=1,b=1)) 
+    stat_smooth(method = 'nls', formula = y ~ a*exp(b *x), aes(colour = 'Exponential'), se = FALSE, start = list(a=1,b=1))
 
-py$ggplotly()
+ggplotly()
