--- a/_posts/ggplot2/smooth/2015-07-15-gaussian-glm-fit.html
+++ b/_posts/ggplot2/smooth/2015-07-15-gaussian-glm-fit.html
@@ -1,5 +1,5 @@
 ---
-name: <code>geom_smooth</code> with Gaussian 
+name: <code>geom_smooth</code> with Gaussian
 plot_url: https://plot.ly/~MattSundquist/17242
 language: ggplot2
 suite: smooth
@@ -15,4 +15,4 @@ library(plotly)
 myplot <- qplot(speed, dist, data=cars)
 myplot + geom_smooth(method = "glm", formula = y~x, family = gaussian(link = 'log'))
 
-py$ggplotly()
+ggplotly()
