--- a/_posts/ggplot2/smooth/2015-07-17-point-and-line.html
+++ b/_posts/ggplot2/smooth/2015-07-17-point-and-line.html
@@ -12,7 +12,7 @@ sitemap: false
 
 library(plotly)
 
-the.data <- read.table( header=TRUE, sep=",", 
+the.data <- read.table( header=TRUE, sep=",",
                         text="source,year,value
     S1,1976,56.98
     S1,1977,55.26
@@ -46,12 +46,12 @@ the.data <- read.table( header=TRUE, sep=",",
     S3,2008,44.00
     S3,2009,45.35
     S3,2010,49.40
-    S3,2011,51.19") 
+    S3,2011,51.19")
 cutoff <- data.frame( x = c(-Inf, Inf), y = 50, cutoff = factor(50) )
 
-ggplot(the.data, aes( year, value ) ) + 
-    geom_point(aes( colour = source )) + 
-    geom_smooth(aes( group = 1 )) + 
+ggplot(the.data, aes( year, value ) ) +
+    geom_point(aes( colour = source )) +
+    geom_smooth(aes( group = 1 )) +
     geom_hline(yintercept = 50)
 
-py$ggplotly()
+ggplotly()
