--- a/_posts/ggplot2/time-series/2015-07-15-month-year-facets.html
+++ b/_posts/ggplot2/time-series/2015-07-15-month-year-facets.html
@@ -1,5 +1,5 @@
 ---
-name: <code>facet_wrap</code> with a time series 
+name: <code>facet_wrap</code> with a time series
 plot_url: https://plot.ly/~MattSundquist/17053
 language: ggplot2
 suite: time-series
@@ -15,7 +15,7 @@ install.packages("plyr")
 
 # Air passenger data. ts converted to long matrix:
 myData <- data.frame(Year = c(floor(time(AirPassengers) + .01)),
-                     Month = c(cycle(AirPassengers)), 
+                     Month = c(cycle(AirPassengers)),
                      Value = c(AirPassengers))
 # easy conversion code from: http://stackoverflow.com/a/4973859/479554
 
@@ -36,4 +36,4 @@ zp <- zp + geom_line(size = 1)  # Drawing the "overlayer"
 zp <- zp + facet_wrap(~ Month)
 zp <- zp + theme_bw()
 
-py$ggplotly()
+ggplotly()
