--- a/_posts/python/pie/2015-07-31-pie-chart-subplots.html
+++ b/_posts/python/pie/2015-07-31-pie-chart-subplots.html
@@ -24,7 +24,7 @@ fig = {
                                   'rgb(34, 53, 101)',
                                   'rgb(36, 55, 57)',
                                   'rgb(6, 4, 4)']},
-            'domain': {'x': [0, .49],
+            'domain': {'x': [0, .48],
                        'y': [0, .49]},
             'hoverinfo':'label+percent+name',
             'textinfo':'none'
@@ -39,7 +39,7 @@ fig = {
                                   'rgb(124, 103, 37)']},
             'type': 'pie',
             'name': 'Sunflowers',
-            'domain': {'x': [.51, 1],
+            'domain': {'x': [.52, 1],
                        'y': [0, .49]},
             'hoverinfo':'label+percent+name',
             'textinfo':'none'
@@ -55,7 +55,7 @@ fig = {
                                   'rgb(36, 73, 147)']},
             'type': 'pie',
             'name': 'Irises',
-            'domain': {'x': [0, .49],
+            'domain': {'x': [0, .48],
                        'y': [.51, 1]},
             'hoverinfo':'label+percent+name',
             'textinfo':'none'
@@ -70,13 +70,13 @@ fig = {
                                   'rgb(35, 36, 21)']},
             'type': 'pie',
             'name':'The Night Café',
-            'domain': {'x': [.51, 1],
+            'domain': {'x': [.52, 1],
                        'y': [.51, 1]},
             'hoverinfo':'label+percent+name',
             'textinfo':'none'
         }
     ],
-    'layout': {'title': 'Van Gogh: 5 Most Prominent Colors Shown Proportionally for 4 Works',
+    'layout': {'title': 'Van Gogh: 5 Most Prominent Colors Shown Proportionally',
                'showlegend': False}
 }
 
