--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -16,22 +16,30 @@ language: plotly_js
 </div>
 
 <h1 class="centered" style="margin-top:-200px;">Plotly.js</h1>
+
 <h3 class="centered">Plotly JavaScript Graphing Library</h3>
-	<div class="row centered btnrow">
-		<a href="https://plot.ly/javascript-graphing-library/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="https://plot.ly/javascript-graphing-library/reference/" class="button no_underline">Reference</a>
-		<a href="https://plot.ly/javascript-graphing-library/showcase/" class="button no_underline">Showcase</a>
-		<a href="http://purchasing.plot.ly/plotlyjs" class="button no_underline">Purchase</a>
-	</div>
 
-		<p style="text-align: center;">
-			<b style="color:#447adb;">plotly.js</b> is Plotly's client-side, interactive JavaScript graphing library, 
-			built on top of <a href="http://d3js.org/">D3.js</a> and 
-			<a href="http://stack.gl/">stackgl</a>.
-		</p>
+<div class="row centered btnrow">
+	<a href="https://plot.ly/javascript-graphing-library/getting-started/" class="button no_underline">Getting Started</a>
+	<a href="https://plot.ly/javascript-graphing-library/reference/" class="button no_underline">Reference</a>
+	<a href="https://plot.ly/javascript-graphing-library/showcase/" class="button no_underline">Showcase</a>
+	<a href="http://purchasing.plot.ly/plotlyjs" class="button no_underline">Purchase</a>
+</div>
 
-	<h2>Documentation Examples</h2>
-		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","plotly_js"  | where:"has_thumbnail",true | sort: "order" %}
-		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","plotly_js" %}
-		
-		{% include documentation_eg.html %}
+	<p style="text-align: center;">
+		<b style="color:#447adb;">plotly.js</b> is Plotly's client-side, interactive JavaScript graphing library, 
+		built on top of <a href="http://d3js.org/">D3.js</a> and 
+		<a href="http://stack.gl/">stackgl</a>.
+	</p>
+
+	<p style="text-align: center;">
+		<b style="color:#447adb;">plotly.js</b> supports all SVG-compatible browsers:
+	</p>
+
+	<img width="300" src="/all_static/images/browser_support.png" style="margin-bottom:60px;"></img>
+
+<h2>Documentation Examples</h2>
+	{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","plotly_js"  | where:"has_thumbnail",true | sort: "order" %}
+	{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","plotly_js" %}
+	
+	{% include documentation_eg.html %}
