--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -103,6 +103,20 @@ permalink: /api/
 					</div>
 				</div>
 
+				<!-- WEB CHARTING -->
+
+				<div class="row">
+					<h6 class="inline-big centeredsmall">Web graphing</h6>
+					<a href="/javascript-graphing-library/"  class="button no_underline centeredsmall">JavaScript</a>					
+					<a href="/python/" class="button no_underline centeredsmall">Python</a>
+					<a href="/nodejs/"  class="button no_underline centeredsmall">Node.js</a>	
+					<a href="https://github.com/plotly/ruby-api"  class="button no_underline centeredsmall">Ruby</a>					
+					<br>
+					<div>
+						<p>Create  D3 graphs for your website servered clientside (JavaScript) or serverside (Python, Node, or Ruby).</p>
+					</div>
+				</div>
+
 				<!-- FIGURE CONVERTERS -->
 
 				<div class="row">
@@ -114,7 +128,7 @@ permalink: /api/
 					<div>
 						<p>Convert your figures into beautiful, online, shareable Plotly graphs!</p>
 					</div>
-				</div>
+				</div>				
 
 				<!-- HARDWARE -->
 
@@ -125,17 +139,6 @@ permalink: /api/
 					<br>
 					<div>
 						<p>Libraries and examples for hardware hackers who want to graph and share their data. Read more in <a href="http://bit.ly/1hKjqy9">Make Magazine</a>.</p>
-					</div>
-				</div>
-
-					<!-- PLOTLYJS -->
-
-				<div class="row">
-					<h6 class="inline-big centeredsmall">Enterprise graphing</h6>
-					<a href="/javascript-graphing-library/"  class="button no_underline centeredsmall">Plotly.js</a>
-					<br>
-					<div>
-						<p>The client-side interactive JavaScript library that powers Plotly.</p>
 					</div>
 				</div>
 
