Update and rename _posts/ggplot2/facets/2015-07-15-facet-horizontal.html to _posts/ggplot2/facet_grid/2015-07-15-facet-horizontal.html

--- a/_posts/ggplot2/facet_grid/2015-07-15-facet-horizontal.html
+++ b/_posts/ggplot2/facet_grid/2015-07-15-facet-horizontal.html
@@ -2,7 +2,7 @@
 name: horizontal <code>facet_grid</code>
 plot_url: https://plot.ly/~MattSundquist/16891
 language: ggplot2
-suite: facets
+suite: grid
 description: Inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Cookbook for R</a>.
 order: 3
 sitemap: false
