--- a/_posts/ggplot2/facet_wrap/2015-07-15-individual-curves.html
+++ b/_posts/ggplot2/facet_wrap/2015-07-15-individual-curves.html
@@ -2,7 +2,7 @@
 name: individual growth curves
 plot_url: https://plot.ly/~MattSundquist/16946
 language: ggplot2
-suite: facets
+suite: wrap
 description: Inspired by <a href="http://www.ats.ucla.edu/stat/r/faq/growth.htm">the IDRE at UCLA</a>.
 order: 10
 sitemap: false
