--- a/_posts/ggplot2/facet_wrap/2015-07-15-smoothed-fit-wrap.html
+++ b/_posts/ggplot2/facet_wrap/2015-07-15-smoothed-fit-wrap.html
@@ -2,7 +2,7 @@
 name: <code>facet_wrap</code> and <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17008
 language: ggplot2
-suite: facets
+suite: wrap
 description: Inspired by <a href="http://www.ling.upenn.edu/~joseff/rstudy/summer2010_ggplot2_intro.html">R Study Group</a>.
 order: 12
 sitemap: false
