--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -36,7 +36,7 @@ language: plotly_js
 		<b style="color:#447adb;">plotly.js</b> supports all SVG-compatible browsers:
 	</p>
 
-	<img width="300" src="/all_static/images/browser_support.png" style="margin-bottom:60px;"></img>
+	<img width="300" src="{{ site.staticurl }}/images/browser_support.png" style="margin-bottom:60px;"></img>
 
 <h2>Documentation Examples</h2>
 	{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","plotly_js"  | where:"has_thumbnail",true | sort: "order" %}
