Update and rename _posts/ggplot2/smooth/2015-07-14-titanic-plot.html to _posts/ggplot2/facet_grid/2015-07-14-titanic-plot.html

--- a/_posts/ggplot2/facet_grid/2015-07-14-titanic-plot.html
+++ b/_posts/ggplot2/facet_grid/2015-07-14-titanic-plot.html
@@ -1,8 +1,8 @@
 ---
-name: facets with <code>stat_smooth</code>
+name: facets with <code>geom_ribbon</code>
 plot_url: https://plot.ly/~MattSundquist/18375/none-none-none-none-none-none-none-none-none-none-none-none-none-none-none-none-/
 language: ggplot2
-suite: smooth
+suite: grid
 description: Inspired by <a href="http://zmjones.com/titanic/">Zachary Jones</a>.
 order: 8
 sitemap: false
