--- a/_posts/ggplot2/stat_smooth/2015-07-15-facet-with-smooth.html
+++ b/_posts/ggplot2/stat_smooth/2015-07-15-facet-with-smooth.html
@@ -2,7 +2,7 @@
 name: facets with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17276
 language: ggplot2
-suite: smooth
+suite: stat
 description: Inspired by <a href="http://www.ats.ucla.edu/stat/r/dae/truncreg.htm">the IDRE at UCLA</a>.
 order: 5
 sitemap: false
