--- a/_posts/ggplot2/stat_smooth/2015-07-16-stat_smooth.html
+++ b/_posts/ggplot2/stat_smooth/2015-07-16-stat_smooth.html
@@ -2,7 +2,7 @@
 name: mpg plot with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17165/
 language: ggplot2
-suite: smooth
+suite: stat
 order: 2
 sitemap: false
 ---
