--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -94,7 +94,7 @@ permalink: /api/
 					<a href="/python/" class="button no_underline centeredsmall">Python</a>
 					<a href="/matlab/" class="button no_underline centeredsmall">MATLAB</a>
 					<a href="/r/"  class="button no_underline centeredsmall">R</a>
-					<a href="/nodejs/"  class="button no_underline centeredsmall">Node.js</a>
+					<a href="/r/shiny-tutorial/"  class="button no_underline centeredsmall">R Shiny</a>
 					<a href="/julia/"  class="button no_underline centeredsmall">Julia</a>
 					<a href="https://store.office.com/plotly-charts-WA104379485.aspx?assetid=WA104379485"  class="button no_underline centeredsmall">Excel App</a>
 					<br>
