--- a/_posts/ggplot2/stat_smooth/2015-07-14-stat_smooth_index.html
+++ b/_posts/ggplot2/stat_smooth/2015-07-14-stat_smooth_index.html
@@ -4,7 +4,7 @@ name: stat_smooth
 permalink: ggplot2/stat_smooth/
 description: Add a smoothed line in ggplot2 and R with stat_smooth. Smoothing method (function) to use, eg. lm, glm, gam, loess, rlm
 layout: base
-thumbnail: /images/line-plots.png
+thumbnail: /images/stat_smooth.png
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
