--- a/_posts/ggplot2/facet_grid/2015-04-09-facets_ggplot2_index.html
+++ b/_posts/ggplot2/facet_grid/2015-04-09-facets_ggplot2_index.html
@@ -4,7 +4,7 @@ name: facet_grid
 permalink: ggplot2/facet_grid/
 description: How to make subplots with facet_wrap and facet_grid in ggplot2 and R.
 layout: base
-thumbnail: /images/facets.png
+thumbnail: /images/facet_grid.png
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
