--- a/_posts/ggplot2/facet_wrap/2015-07-14-facet_wrap_index.html
+++ b/_posts/ggplot2/facet_wrap/2015-07-14-facet_wrap_index.html
@@ -4,7 +4,7 @@ name: facet_wrap
 permalink: ggplot2/facet_wrap/
 description: How to make subplots with facet_wrap in ggplot2 and R.
 layout: base
-thumbnail: /images/facets.png
+thumbnail: /images/facet_wrap.png
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
