templated dashboard pages, better home page

--- a/_posts/matlab/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/matlab/dashboard/2015-07-29-dashboard-index.html
@@ -1,9 +1,9 @@
 ---
-title: Python Dashboards
+title: MATLAB Dashboards
 name: Dashboards
-permalink: python/dashboard/
-description: Dashboard of charts created and updated with Python
-language: python
+permalink: matlab/dashboard/
+description: Dashboard of charts created and updated with MATLAB
+language: matlab
 thumbnail: /images/dashboard.png
 page_type: example_index
 has_thumbnail: true
