--- a/_posts/ggplot2/geom_ribbon/2015-07-21-ribbon-line-bar.html
+++ b/_posts/ggplot2/geom_ribbon/2015-07-21-ribbon-line-bar.html
@@ -2,9 +2,9 @@
 name: using <code>geom_line</code> with <code>geom_ribbon</code>
 plot_url: https://plot.ly/~MattSundquist/17629/y-vs-x/
 language: ggplot2
-suite: geom_line
-description: Inspired by <a href="http://stackoverflow.com/questions/28714492/legend-with-geom-line-and-geom-ribbon">Stack Overflow</a>.
-order: 9
+suite: ribbon
+description: Write feedback@plot.ly with questions or  <a href="https://github.com/ropensci/plotly/issues">submit an issue</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for ggplot2 conversion coverage. Inspired by <a href="http://stackoverflow.com/questions/28714492/legend-with-geom-line-and-geom-ribbon">Stack Overflow</a>.
+order: 1
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
