--- a/_posts/ggplot2/geom_ribbon/2015-07-14-titanic-plot.html
+++ b/_posts/ggplot2/geom_ribbon/2015-07-14-titanic-plot.html
@@ -2,9 +2,9 @@
 name: facets with <code>geom_ribbon</code>
 plot_url: https://plot.ly/~MattSundquist/18375/none-none-none-none-none-none-none-none-none-none-none-none-none-none-none-none-/
 language: ggplot2
-suite: grid
+suite: ribbon
 description: Inspired by <a href="http://zmjones.com/titanic/">Zachary Jones</a>.
-order: 9
+order: 2
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
