--- a/_posts/ggplot2/geom_ribbon/2015-07-15-facet-with-smoothing.html
+++ b/_posts/ggplot2/geom_ribbon/2015-07-15-facet-with-smoothing.html
@@ -2,9 +2,9 @@
 name: <code>facet_wrap</code> with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17004
 language: ggplot2
-suite: wrap
+suite: ribbon
 description: Inspired by <a href="http://stackoverflow.com/questions/8662018/ggplot2-stat-smooth-for-logistic-outcomes-with-facet-wrap-returning-full-or">Stack Overflow</a>.
-order: 11
+order: 3
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
