--- a/_posts/ggplot2/scale_y_continuous/2015-07-21-log_scale.html
+++ b/_posts/ggplot2/scale_y_continuous/2015-07-21-log_scale.html
@@ -2,7 +2,7 @@
 name: log scale with <code>geom_boxplot</code>
 plot_url: https://plot.ly/~MattSundquist/17576/price-log10-scaling-vs-color/
 language: ggplot2
-suite: log
+suite: yscale
 description: Inspired by <a href="http://stackoverflow.com/questions/4699493/transform-only-one-axis-to-log10-scale-with-ggplot2">Stack Overflow</a>.
 order: 1
 sitemap: false
