Update and rename _posts/ggplot2/log_scale/2015-07-20-log_scale_index.html to _posts/ggplot2/yscale/2015-07-20-log_scale_index.html

--- a/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
+++ b/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
@@ -1,6 +1,6 @@
 ---
 title: ggplot2 log scale | Examples | Plotly
-name: log scale
+name: yscale
 permalink: ggplot2/log_plot/
 description: How to use logarithmic scales with ggplot2 axes.
 layout: base
@@ -10,5 +10,5 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 ---
-{% assign examples = site.posts | where:"language","ggplot2" | where:"suite","log" | sort: "order" %}
+{% assign examples = site.posts | where:"language","ggplot2" | where:"suite","yscale" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
