--- a/_posts/2015-04-05-plotlyjs-function-reference-index.html
+++ b/_posts/2015-04-05-plotlyjs-function-reference-index.html
@@ -1,28 +1,30 @@
 ---
-title: Plotly.js Function Reference
+title: "Plotly.js Function Reference"
 name: Plotly.js Function Reference
+permalink: /javascript-graphing-library/plotlyjs-function-reference
 layout: getstart
-permalink: javascript-graphing-library/plotlyjs-function-reference
 language: plotly_js
 description: Plotly.js function reference. How to create, update, and modify graphs drawn with Plotly's Javascript Graphing Library.
 ---
 
-# Plotly Object Reference
+<h1 id="plotly-object-reference" style="margin-top:-200px;">Plotly Object Reference</h1>
+<br>
 
+<h5 id="other-plotlyjs-resources">Other Plotly.js Resources</h5>
 
-##### Other Plotly.js Resources
-- [Simple examples of Plotly.js graphs](https://plot.ly/javascript-graphing-library/)
-- [Reference of all of valid keys of Plotly.js graphs](https://plot.ly/javascript-graphing-library/reference)
-- Find the JSON description of *any* plotly graph by adding `.json` to the end of *any* Plotly graph url.
-  For example, the JSON to describe this graph: [https://plot.ly/~PlotBot/82](https://plot.ly/~PlotBot/82)
-  is here: [https://plot.ly/~PlotBot/82.json](https://plot.ly/~PlotBot/82.json)
-- Support: <support@plot.ly>, [@plotlygraphs](https://twitter.com/plotlygraphs)
+<ul>
+  <li><a href="https://plot.ly/javascript-graphing-library/">Simple examples of Plotly.js graphs</a></li>
+  <li><a href="https://plot.ly/javascript-graphing-library/reference">Reference of all of valid keys of Plotly.js graphs</a></li>
+  <li>Find the JSON description of <em>any</em> plotly graph by adding <code>.json</code> to the end of <em>any</em> Plotly graph url.
+For example, the JSON to describe this graph: <a href="https://plot.ly/~PlotBot/82">https://plot.ly/~PlotBot/82</a>
+is here: <a href="https://plot.ly/~PlotBot/82.json">https://plot.ly/~PlotBot/82.json</a></li>
+  <li>Support: <a href="http://stackoverflow.com/questions/tagged/plotly?sort=newest&pageSize=15">StackOverflow</a>, <a href="https://twitter.com/plotlygraphs">@plotlygraphs</a></li>
+</ul>
 
+<h3 id="plot-with-plotlyplot">Plot with <code>Plotly.plot</code></h3>
 
-#### Plot with `Plotly.plot`
-Use `plot` to create a new plot in an empty `<div>` element. You can also use this to add traces to an existing plot, though this behavior is deprecated, it's preferable to use `addTraces` or edit the data array and use `redraw`.
-A note on sizing: You can either supply height and width in `layout`, or give `graphDiv` a height and width in css.
-
+<p>Use <code>plot</code> to create a new plot in an empty <code>&lt;div&gt;</code> element. You can also use this to add traces to an existing plot, though this behavior is deprecated, it’s preferable to use <code>addTraces</code> or edit the data array and use <code>redraw</code>.
+A note on sizing: You can either supply height and width in <code>layout</code>, or give <code>graphDiv</code> a height and width in css.</p>
 
 <pre><code>
 var trace1 = {
@@ -61,9 +63,8 @@ var layout2 = {title: "Revenue"};
 Plotly.plot(graphDiv, data2, layout2);
 </code></pre>
 
-
-#### Redraw with `Plotly.redraw`
-Use `redraw` to trigger a complete recalculation and redraw of the graph. This is not the fastest way to change single attributes, but may be the simplest way. You can make any arbitrary change to the data and layout objects, including completely replacing them, then call redraw.
+<h3 id="redraw-with-plotlyredraw">Redraw with <code>Plotly.redraw</code></h3>
+<p>Use <code>redraw</code> to trigger a complete recalculation and redraw of the graph. This is not the fastest way to change single attributes, but may be the simplest way. You can make any arbitrary change to the data and layout objects, including completely replacing them, then call redraw.</p>
 
 <pre><code>
 // make a modification to a `graphDiv`'s data and redraw
@@ -77,8 +78,8 @@ graphDiv.layout.showlegend = false;
 Plotly.redraw(graphDiv);
 </code></pre>
 
-#### Edit attributes with `Plotly.restyle`
-A more efficient means of changing parameters in the data array. When restyling, you may choose to have the specified changes effect as many traces as desired. The update is given as a single object and the traces that are effected are given as a list of traces indices. Note, leaving the trace indices unspecified assumes that you want to restyle *all* the traces.
+<h3 id="edit-attributes-with-plotlyrestyle">Edit attributes with <code>Plotly.restyle</code></h3>
+<p>A more efficient means of changing parameters in the data array. When restyling, you may choose to have the specified changes effect as many traces as desired. The update is given as a single object and the traces that are effected are given as a list of traces indices. Note, leaving the trace indices unspecified assumes that you want to restyle <em>all</em> the traces.</p>
 
 <pre><code>
 // restyle a single trace using attribute strings
@@ -103,7 +104,7 @@ var update = {
 Plotly.restyle(graphDiv, update, [1, 2]);
 </code></pre>
 
-The above examples have applied values across single or multiple traces. However, you can also specify *arrays* of values to apply to traces *in turn*.
+<p>The above examples have applied values across single or multiple traces. However, you can also specify <em>arrays</em> of values to apply to traces <em>in turn</em>.</p>
 
 <pre><code>
 // restyle the first trace's marker color 'red' and the second's 'green'
@@ -119,7 +120,7 @@ var update = {
 Plotly.restyle(graphDiv, update)
 </code></pre>
 
-In restyle, arrays are assumed to be used in conjunction with the trace indices provided. Therefore, to apply an array *as a value*, you need to wrap it in an additional array. For example:
+<p>In restyle, arrays are assumed to be used in conjunction with the trace indices provided. Therefore, to apply an array <em>as a value</em>, you need to wrap it in an additional array. For example:</p>
 
 <pre><code>
 // update the color attribute of the first trace so that the markers within the same trace
@@ -134,7 +135,7 @@ var update = {'z': [[[1,2,3], [2,1,2], [1,1,1]], [[0,1,1], [0,2,1], [3,2,1]]]};
 Plotly.restyle(graphDiv, update, [1, 2])
 </code></pre>
 
-The term *attribute strings* is used above to mean *flattened* (e.g., `{marker: {color: 'red'}}` vs. `{'marker.color': red}`). When you pass an attribute string to restyle inside the update object, it's assumed to mean *update only this attribute*. Therefore, if you wish to replace and entire sub-object, you may simply specify *one less level of nesting*.
+<p>The term <em>attribute strings</em> is used above to mean <em>flattened</em> (e.g., <code>{marker: {color: 'red'}}</code> vs. <code>{'marker.color': red}</code>). When you pass an attribute string to restyle inside the update object, it’s assumed to mean <em>update only this attribute</em>. Therefore, if you wish to replace and entire sub-object, you may simply specify <em>one less level of nesting</em>.</p>
 
 <pre><code>
 // replace the entire marker object with the one provided
@@ -144,8 +145,8 @@ var update = {
 Plotly.restyle(graphDiv, update, [0])
 </code></pre>
 
-#### Update layout attributes with `Plotly.relayout`
-A more efficient means of updating just the layout in a graphDiv. The call signature and arguments for relayout are similar (but simpler) to restyle. Because there are no indices to deal with, arrays need not be wrapped. Also, no argument specifying applicable trace indices is passed in.
+<h3 id="update-layout-attributes-with-plotlyrelayout">Update layout attributes with <code>Plotly.relayout</code></h3>
+<p>A more efficient means of updating just the layout in a graphDiv. The call signature and arguments for relayout are similar (but simpler) to restyle. Because there are no indices to deal with, arrays need not be wrapped. Also, no argument specifying applicable trace indices is passed in.</p>
 
 <pre><code>
 // update only values *within* nested objects
@@ -156,7 +157,7 @@ var update = {
 Plotly.relayout(graphDiv, update)
 </code></pre>
 
-Again, caution should be taken regarding flat *attribute strings* vs sub-objects used with relayout. In the above example, the value for `range` *in* `xaxis` is update. Conversly, below, the `xaxis` object is *replaced* with one that only has the range value:
+<p>Again, caution should be taken regarding flat <em>attribute strings</em> vs sub-objects used with relayout. In the above example, the value for <code>range</code> <em>in</em> <code>xaxis</code> is update. Conversly, below, the <code>xaxis</code> object is <em>replaced</em> with one that only has the range value:</p>
 
 <pre><code>
 // update an entire nested object with relayout
@@ -167,8 +168,8 @@ var update = {
 Plotly.relayout(graphDiv, update)
 </code></pre>
 
-#### Add Traces with `Plotly.addTraces`
-This allows you to add *new* traces to an existing `graphDiv` at any location in its data array.
+<h3 id="add-traces-with-plotlyaddtraces">Add Traces with <code>Plotly.addTraces</code></h3>
+<p>This allows you to add <em>new</em> traces to an existing <code>graphDiv</code> at any location in its data array.</p>
 
 <pre><code>
 // add a single trace to an existing graphDiv
@@ -181,8 +182,8 @@ Plotly.addTraces(graphDiv, [{'y': [2,1,2]}, {'y': [4, 5, 7]}]);
 Plotly.addTraces(graphDiv, {'y': [1, 5, 7]}, 0);
 </code></pre>
 
-#### Delete Traces with `Plotly.deleteTraces`
-This allows you to remove traces from an existing `graphDiv` by specifying the indices of the traces to be removed.
+<h3 id="delete-traces-with-plotlydeletetraces">Delete Traces with <code>Plotly.deleteTraces</code></h3>
+<p>This allows you to remove traces from an existing <code>graphDiv</code> by specifying the indices of the traces to be removed.</p>
 
 <pre><code>
 // remove the first trace
@@ -192,8 +193,8 @@ Plotly.deleteTraces(graphDiv, 0);
 Plotly.deleteTraces(graphDiv, [-2, -1]);
 </code></pre>
 
-#### Move Traces with `Plotly.moveTraces`
-This allows you to reorder traces in an existing `graphDiv`. This will change the ordering of the layering and the legend.
+<h3 id="move-traces-with-plotlymovetraces">Move Traces with <code>Plotly.moveTraces</code></h3>
+<p>This allows you to reorder traces in an existing <code>graphDiv</code>. This will change the ordering of the layering and the legend.</p>
 
 <pre><code>
 // move the first trace (at index 0) the the end of the data array
@@ -208,3 +209,5 @@ Plotly.moveTraces(graphDiv, -1, 0);
 // move selected traces (at indices [1, 4, 5]) to new indices [0, 3, 2]
 Plotly.moveTraces(graphDiv, [1, 4, 5], [0, 3, 2]);
 </code></pre>
+<br>
+<br>
